Remove 96vh to fix final mobile overflow

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  height: auto;
   margin: 0 auto;
   padding-left: 2rem;
   padding-right: 2rem;
